--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -15,6 +16,14 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dataBinding {
+        enabled = true
+    }
+
+    configurations.all {
+        exclude group: 'com.android.support', module: 'support-v13'
     }
 }
 
@@ -25,7 +34,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:cardview-v7:+'
 
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //circle image
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'com.android.support:multidex:1.0.0'
 
