--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".activities.peopleActivity.PeopleView"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.personDetailsActivity.PersonDetailsView"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
